This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: segfault when deleting value member in ctypes types
Type: crash Stage:
Components: Extension Modules Versions: Python 3.0, Python 2.6, Python 2.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: theller Nosy List: Carl.Friedrich.Bolz, theller
Priority: normal Keywords:

Created on 2007-12-17 19:58 by Carl.Friedrich.Bolz, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Messages (2)
msg58705 - (view) Author: Carl Friedrich Bolz-Tereick (Carl.Friedrich.Bolz) * Date: 2007-12-17 19:58
When trying to delete the .value member of ctypes simple types my python
interpreter segfaults:

$ python
Python 2.5.1 (r251:54863, Oct  5 2007, 13:36:32)
[GCC 4.1.3 20070929 (prerelease) (Ubuntu 4.1.2-16ubuntu2)] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> from ctypes import c_long
>>> c = c_long(1)
>>> c.value
1
>>> del c.value
Segmentation fault (core dumped)


Admittedly there is no good usecase for this, but it should raise an
exception and not segfault.
msg58754 - (view) Author: Thomas Heller (theller) * (Python committer) Date: 2007-12-18 19:06
Fixed in rev. 59549 (trunk) and rev. 59550 (release25-maint).

Thanks.
History
Date User Action Args
2022-04-11 14:56:29adminsetgithub: 45983
2007-12-18 19:06:38thellersetstatus: open -> closed
resolution: fixed
messages: + msg58754
2007-12-17 20:20:27christian.heimessetpriority: normal
assignee: theller
nosy: + theller
versions: + Python 2.6, Python 3.0
2007-12-17 19:58:19Carl.Friedrich.Bolzcreate