Issue #1642: Fix segfault in ctypes when trying to delete attributes.